--- a/fe/package.json
+++ b/fe/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "fe",
-	"version": "0.1.0",
+	"name": "bio_verify_fe",
+	"version": "0.1.0-alpha",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
